--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <style>
     </style>
   </head>
+  <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
   <body id="logged-out">
     <section id="chat">
       <ul id="messages">
