--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,6 @@
     <style>
     </style>
   </head>
-  <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
   <body id="logged-out">
     <section id="chat">
       <ul id="messages">
@@ -31,9 +30,9 @@
         </p>
       </form>
     </section>
-    <script src="components/rivets/dist/rivets.bundled.min.js"></script>
-    <script src="components/jquery/dist/jquery.min.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/rivets/0.9.6/rivets.bundled.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.dev.js"></script>
     <script src="utils.js"></script>
     <script src="client.js"></script>
   </body>
